@@ -1,3 +1,3 @@
 To create an RPM package:
 
-rpmbuild -tb pcapsipdump-0.1.3.tar.gz
+rpmbuild -tb pcapsipdump-{version}.tar.gz
