@@ -7,7 +7,7 @@
 #		traffic, if available) to disk in a fashion similar
 #		to "tcpdump -w" (format is exactly the same), but one
 #		file per sip session (even if there is thousands of
-#		concurrect SIP sessions).
+#		concurrent SIP sessions).
 # processname: pcalsipdump
 # pidfile: /var/run/pcapsipdump.pid
 
